# calendar

./: .gitignore  General_Vrata.py  JivaCalendar_Ecliptic.py  JivaCalendar_FrontEnd.py  README.md  SpecialVratas.py  hvv.py  main.py  parana.py  pyproject.toml
backend/: Constants.py  General_Vrata.py  JivaCalendar_Ecliptic.py  JivaCalendar_FrontEnd.py  SpecialVratas.py  hvv.py  main.py
frontend/: index.html  package-lock.json  package.json  postcss.config.ts  tailwind.config.js
frontend/constants/: month_panjika.ts  specialvrata.ts
frontend/src/: App.css  App.tsx  MonthPanjika.tsx  main.tsx
frontend/src/components/: Button.tsx  InputForm.tsx  MonthEkadashi.tsx  MonthPanjika.tsx  RenderComponent.tsx  SpecialVrata.tsx  YearEkadashi.tsx  YearPanjika.tsx
