[tool.poetry]
name = "calendar"
version = "0.1.0"
description = ""
authors = ["Naincy Rastogi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.3"
astroplan = "^0.10.1"
numpy = "^1.17.0"
astropy = "^7.0.0"
astral = "^3.2"
scipy = "^1.14.1"
jplephem = "2.22"
mathjspy = "^0.0.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
